# smash_minecraft_renders

./: .gitignore  Cargo.toml  README.md
extras/: alex.blend
src/: lib.rs  main.rs  modern_skin.rs
