[package]
name = "minecraft_render"
version = "0.1.0"
authors = ["ScanMountGoat <>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "minecraft_render"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
image = "0.23"
imageproc = "0.21"

clap = { version = "2.33", optional = true }

[features]
cli = ["clap"]

[profile.release]
debug = true
